# landing

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
.docker/local/: Dockerfile  docker-compose.yml
.docker/remote/: Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml
api/docs/: schema.yml
application/service/: payment_service.py
config/: __init__.py  asgi.py  social_auth_pipelines.py  urls.py  wsgi.py
config/settings/: base.py  common_settings.py  postgres_settings.py  production.py  remote_settings.py  test.py  test_settings.py
domain/entity/: invoice.py  payment.py  product.py  subscription.py  user.py
domain/event/: base_event.py  invoice_cancelled_event.py  invoice_paid_event.py  invoice_payment_failed_event.py  invoice_payment_success_event.py  invoice_refunded_event.py  payment_cancelled_event.py  payment_failed_event.py  payment_success_event.py  purchase_event.py  recurring_payment_event.py  refund_processed_event.py  subscription_cancelled_event.py  subscription_expired_event.py  subscription_renewal_event.py  subscription_status_changed_event.py
domain/repository/: event_consumer.py  event_producer.py  event_publisher.py  invoice_repository.py  payment_repository.py  product_repository.py  subscription_repository.py  user_repository.py
domain/vo/: currency.py  invoice_status.py  payment_method.py  payment_status.py  recurring_period.py  subscription_status.py
landing_app/: admin.py  apps.py  urls.py
landing_app/infra/: admin.py  apps.py  urls.py
landing_app/models/: user.py  (+2 more)
static/: .gitignore  index.html
(+11 files in other folders)
